# blackroad-os-core

./: .blackroad.yml  .dockerignore  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  AGENT_DOMAINS_DEPLOYMENT.md  ALEXA_AMUNDSON_RESUME.md  APPLIER_PRODUCTION_READY.md  APPLIER_STATUS.txt  ARCHITECTURE.md  ARKHAM_INTEGRATION_README.md  BACKEND-FACTORY-COMPLETE.md  BACKEND-FACTORY-CONCEPT.md  BLACKROAD-FORKIES-MAP.md  BLACKROAD_ENGINE_COMPLETE.md  BLACKROAD_ENGINE_FORK_MANIFEST.md  BLACKROAD_ENGINE_QUICK_START.md  BLACKROAD_MODEL_FORK_MANIFEST.md  BR-ID-FRAMEWORK.md  BR-ID-IMPLEMENTATION-SUMMARY.md  BR-ID-INVENTORY.yaml  CLOUDFLARE_DEPLOYMENT_SUMMARY.md  CLOUDFLARE_FINAL_CONFIGURATION.md  CLOUDFLARE_PAGES_README.md  CLOUDFLARE_SUBDOMAIN_ARCHITECTURE.md  CODEOWNERS  CONFIGURATION.md  CONTRIBUTING.md  DEPLOY_NOW.sh  DO_THIS_NOW.sh  Dockerfile  EPIC-BUILD-SESSION-SUMMARY.md  EXCHANGE_SETUP_COMPLETE.md  FORK_DOMAINS_COMPLETE.md  GENESIS_BLOCK_0_COMPLETE.md  GENESIS_IDENTITY.md  INTEGRATIONS-HUB-COMPLETE.md  INTEGRATIONS-HUB-FINAL.md  JOB_HUNTER_PACK_SUMMARY.md  (+102 more)
.github/: CODEOWNERS  copilot-instructions.md  labeler.yml  labels.yml
applier-frontend/: README.md  package.json
backend/: README.md  main.py  requirements.txt
br-terminal/: br-env.zsh
docs/: ARCHITECTURE.md  COPILOT_SUPERPROMPT.md  CORE_OVERVIEW.md  INFRASTRUCTURE_BIBLE.md  SDK_API_REFERENCE.md  ci-workflows.md  testing.md
examples/: complete_agent_system_demo.py  job_hunter_demo.py
infra/: .env.example  Dockerfile  README.md  railway.toml
localai-config/: preload-models.yaml
src/: config.ts  (+6 more)
(+480 files in other folders)
