[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackroad-os-core"
version = "0.1.0"
description = "Core backend API and operator engine for BlackRoad OS"
authors = [{ name = "BlackRoad OS" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.5.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
